# structrure_test_repo

./: .gitignore  setup.cfg
docs/original_docs/: How_to_denoise.txt  How_to_use_priors.txt
docs/source/: conf.py  index.rst
src/poet/: ballardip.py
src/poet/data/TEP/: WASP-140b.tep  WASP-37b.tep  WASP-95b.tep
src/poet/data/config/: center.ini  center.pcf
tests/: test_ballardip.py
