[metadata]
name = poet
version = 0.0.1
author = Iva
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE

[options]
package_dir =
  =src
packages = find:
python_requires= >=3.7

# Example of how to add dependencies:
install_requires =
  importlib-metadata >= 2.0 ; python_version < "3.8"
  numpy
  matplotlib

[options.packages.find]
where = src
